fix(ui): wrong jump logic of resource group view

--- a/ui/src/components/yaml/styles.module.less
+++ b/ui/src/components/yaml/styles.module.less
@@ -4,8 +4,8 @@
 
   .copy {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
   }
 
   .yaml_box {
